change color scheme to differentiate from hazel

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,8 @@
         font-family: -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
         "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-        background: black;
-        color: white;
+        background: hsla(210, 17%, 10%, 1);
+        color: hsla(207, 21%, 88%, 1);
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         text-rendering: optimizeLegibility;
@@ -63,7 +63,7 @@
       }
 
       .item a {
-        color: #ff0387;
+        color: hsla(77, 76%, 61%, 1);
         text-decoration: none;
       }
 
@@ -108,7 +108,8 @@
         margin-right: 8px;
         padding: 2px 6px;
         border-radius: 4px;
-        background: linear-gradient(#ff00a5, #f65538)
+        color:hsla(210, 17%, 10%, 1);
+        background: hsla(77, 76%, 61%, 0.8);
       }
 
       #release-notes {
